care-australia-uat/force-app/main/default/objects/Loan__c/fields/Actual_Loan_Principle_Disbursed_AUD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Loan_Principle_Disbursed_AUD__c</fullName>
    <label>Actual Loan Principle Disbursed (AUD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>