care-australia-uat/force-app/main/default/objects/Loan__c/fields/Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Funded__c</fullName>
    <label>Amount Funded (AUD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>