care-australia-uat/force-app/main/default/objects/Loan__c/fields/Amount_Left_Before_Fully_Funded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Left_Before_Fully_Funded__c</fullName>
    <formula>Published_Amount_AUD__c - Amount_Funded__c</formula>
    <label>Amount Left Before Fully Funded</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>