care-australia-uat/force-app/main/default/objects/Loan__c/fields/Borrower_Country__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Country__c</fullName>
    <formula>TEXT(Borrower__r.Country__c)</formula>
    <label>Borrower Country</label>
    <type>Text</type>
</CustomField>