care-australia-uat/force-app/main/default/objects/Loan__c/fields/Buffer_AUD__c.field-meta.xml
<CustomField>
    <fullName>Buffer_AUD__c</fullName>
    <description>Buffer amount in AUD</description>
    <label>Buffer (AUD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>