care-australia-uat/force-app/main/default/objects/Loan__c/fields/Buffer_Setteled__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Setteled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in LWCLenderRepaymentScheduler to acknowledge the buffer has been repaid to lenders</description>
    <label>Buffer_Setteled</label>
    <type>Checkbox</type>
</CustomField>