care-australia-uat/force-app/main/default/objects/Loan__c/fields/Buffer_To_Repay__c.field-meta.xml
<CustomField>
    <fullName>Buffer_To_Repay__c</fullName>
    <label>Buffer To Repay</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>