care-australia-uat/force-app/main/default/objects/Loan__c/fields/CA_Disbursed_Date__c.field-meta.xml
<CustomField>
    <fullName>CA_Disbursed_Date__c</fullName>
    <description>date CA has transfered the loan amount to SFP</description>
    <label>CA Disbursed Date</label>
    <type>Date</type>
</CustomField>