care-australia-uat/force-app/main/default/objects/Loan__c/fields/CA_Themes__c.field-meta.xml
<CustomField>
    <fullName>CA_Themes__c</fullName>
    <description>high level themes according to CARE program strategy / targeting</description>
    <label>CA Themes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Climate Adaptation</fullName>
            </value>
            <value>
                <fullName>Climate Mitigation</fullName>
            </value>
            <value>
                <fullName>Women Led Business</fullName>
            </value>
            <value>
                <fullName>Increasing Women&apos;s Employment</fullName>
            </value>
            <value>
                <fullName>Disaster preparedness or response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>