care-australia-uat/force-app/main/default/objects/Loan__c/fields/CMS_Key__c.field-meta.xml
<CustomField>
    <fullName>CMS_Key__c</fullName>
    <label>CMS Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>