care-australia-uat/force-app/main/default/objects/Loan__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the borrower have a collateral asset?</description>
    <inlineHelpText>Does the borrower have a collateral asset?</inlineHelpText>
    <label>Collateral</label>
    <type>Checkbox</type>
</CustomField>