care-australia-uat/force-app/main/default/objects/Loan__c/fields/Collateral_Detail__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Detail__c</fullName>
    <description>Type of collateral (e.g. social, asset, security)</description>
    <inlineHelpText>Type of collateral (e.g. social, asset, security)</inlineHelpText>
    <label>Collateral Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>