care-australia-uat/force-app/main/default/objects/Loan__c/fields/Consent_Provided__c.field-meta.xml
<CustomField>
    <fullName>Consent_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The borrower has provided consent for their photo and name to appear on the platform.</description>
    <inlineHelpText>The borrower has provided consent for their photo and name to appear on the platform.</inlineHelpText>
    <label>Consent Provided (required)</label>
    <type>Checkbox</type>
</CustomField>