care-australia-uat/force-app/main/default/objects/Loan__c/fields/Cumulative_Amount_Expected_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Amount_Expected_To_Date__c</fullName>
    <label>Cumulative Amount Expected To Date (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>