care-australia-uat/force-app/main/default/objects/Loan__c/fields/Cumulative_Amount_Received_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Amount_Received_To_Date__c</fullName>
    <description>Addition from all previous repayments received to date.</description>
    <label>Cumulative Amount Received To Date (LC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>