care-australia-uat/force-app/main/default/objects/Loan__c/fields/Defaulted_Date__c.field-meta.xml
<CustomField>
    <fullName>Defaulted_Date__c</fullName>
    <label>Defaulted Date</label>
    <type>Date</type>
</CustomField>