care-australia-uat/force-app/main/default/objects/Loan__c/fields/Expected_Fund_From_Cart__c.field-meta.xml
<CustomField>
    <fullName>Expected_Fund_From_Cart__c</fullName>
    <label>Expected Fund From Cart</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>