care-australia-uat/force-app/main/default/objects/Loan__c/fields/Expected_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Funded_Date__c</fullName>
    <label>Expected Funded Date</label>
    <type>Date</type>
</CustomField>