care-australia-uat/force-app/main/default/objects/Loan__c/fields/Feature_on_LWC_HomePage__c.field-meta.xml
<CustomField>
    <fullName>Feature_on_LWC_HomePage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feature on LWC HomePage</label>
    <type>Checkbox</type>
</CustomField>