care-australia-uat/force-app/main/default/objects/Loan__c/fields/Female_Employees_Count__c.field-meta.xml
<CustomField>
    <fullName>Female_Employees_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Female Employees Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>