care-australia-uat/force-app/main/default/objects/Loan__c/fields/First_Date_NonPerforming__c.field-meta.xml
<CustomField>
    <fullName>First_Date_NonPerforming__c</fullName>
    <description>date Is nonperforming ticked. Cannot be updated if &quot;is Nonperforming&quot; gets unticked and ticked again</description>
    <label>First Date NonPerforming</label>
    <type>Date</type>
</CustomField>