care-australia-uat/force-app/main/default/objects/Loan__c/fields/First_Repayment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Repayment_Due_Date__c</fullName>
    <label>First Repayment Due Date</label>
    <summarizedField>Repayment_Schedule__c.Due_Date__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>