care-australia-uat/force-app/main/default/objects/Loan__c/fields/First_Time_Loan__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a first time loan for this recipient with the FSP</description>
    <label>First Time Loan</label>
    <type>Checkbox</type>
</CustomField>