care-australia-uat/force-app/main/default/objects/Loan__c/fields/FSP__c.field-meta.xml
<CustomField>
    <fullName>FSP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSP</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>