care-australia-uat/force-app/main/default/objects/Loan__c/fields/FSP_Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>FSP_Loan_ID__c</fullName>
    <description>Loan ID in FSP system</description>
    <label>FSP Loan ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>