care-australia-uat/force-app/main/default/objects/Loan__c/fields/FSP_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>FSP_Loan_Number__c</fullName>
    <description>To display the FSP Loan Id as Loan Number(Hyperlink) in List Views</description>
    <formula>IF($User.UIThemeDisplayed &lt;&gt; &apos;Theme3&apos;,IF(FSP_Loan_ID__c  &lt;&gt; &quot;&quot;, HYPERLINK(&apos;/&apos;&amp;Id, FSP_Loan_ID__c, &apos;_self&apos;), HYPERLINK(&apos;/&apos;&amp;Id, Name, &apos;_self&apos;)), IF(FSP_Loan_ID__c  &lt;&gt; &quot;&quot;, HYPERLINK(&apos;/LendWithCareFSP/s/detail/&apos;&amp;Id, FSP_Loan_ID__c, &apos;_self&apos;), HYPERLINK(&apos;/LendWithCareFSP/s/detail/&apos;&amp;Id, Name, &apos;_self&apos;))
)</formula>
    <label>FSP Loan Number</label>
    <type>Text</type>
</CustomField>