care-australia-uat/force-app/main/default/objects/Loan__c/fields/FSP_Monthly_Settlement__c.field-meta.xml
<CustomField>
    <fullName>FSP_Monthly_Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSP Monthly Settlement</label>
    <referenceTo>FSP_Monthly_Settlement__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>