care-australia-uat/force-app/main/default/objects/Loan__c/fields/FSP_Name__c.field-meta.xml
<CustomField>
    <fullName>FSP_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSP Account Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans (FSP name)</relationshipLabel>
    <relationshipName>Loans1</relationshipName>
    <type>Lookup</type>
</CustomField>