care-australia-uat/force-app/main/default/objects/Loan__c/fields/FSPName__c.field-meta.xml
<CustomField>
    <fullName>FSPName__c</fullName>
    <formula>FSP_Name__r.FirstName + &apos; &apos;+ FSP_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSPName</label>
    <type>Text</type>
</CustomField>