care-australia-uat/force-app/main/default/objects/Loan__c/fields/Funded__c.field-meta.xml
<CustomField>
    <fullName>Funded__c</fullName>
    <formula>(Amount_Funded__c / Published_Amount_AUD__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>