care-australia-uat/force-app/main/default/objects/Loan__c/fields/Future_Offset_Inclusion_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Offset_Inclusion_Date__c</fullName>
    <label>Future Offset Inclusion Date</label>
    <type>Date</type>
</CustomField>