care-australia-uat/force-app/main/default/objects/Loan__c/fields/FX_Rate_VND_To_USD__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_VND_To_USD__c</fullName>
    <label>FX Rate (LC To USD)</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>