care-australia-uat/force-app/main/default/objects/Loan__c/fields/GBV_Information_Provided__c.field-meta.xml
<CustomField>
    <fullName>GBV_Information_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gender Based Violence
Yes = liflet has been provided</description>
    <label>GBV Information Provided</label>
    <type>Checkbox</type>
</CustomField>