care-australia-uat/force-app/main/default/objects/Loan__c/fields/Include_in_Offset_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Offset_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Offset Calculation</label>
    <type>Checkbox</type>
</CustomField>