care-australia-uat/force-app/main/default/objects/Loan__c/fields/Is_NonPerforming__c.field-meta.xml
<CustomField>
    <fullName>Is_NonPerforming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked if a repayment is missed</description>
    <label>Is NonPerforming</label>
    <type>Checkbox</type>
</CustomField>