care-australia-uat/force-app/main/default/objects/Loan__c/fields/Jobs_Created__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Created__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of new jobs created because of this loan, if any (including borrower &amp; partner)</description>
    <label>Jobs Created</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>