care-australia-uat/force-app/main/default/objects/Loan__c/fields/Last_Months_Expected_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Last_Months_Expected_Repayment__c</fullName>
    <label>Last Month&apos;s Expected Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>