care-australia-uat/force-app/main/default/objects/Loan__c/fields/Last_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Last_Repayment__c</fullName>
    <description>last repayment amount received by CA</description>
    <label>Last Repayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>