care-australia-uat/force-app/main/default/objects/Loan__c/fields/Last_Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Repayment_Date__c</fullName>
    <label>Last Repayment Date</label>
    <type>Date</type>
</CustomField>