care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Disbursement_Date__c</fullName>
    <description>Date the FSP / MFI disbursed the loan to the borrower</description>
    <label>Loan Disbursement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>