care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Maturity_Date__c</fullName>
    <label>Loan Maturity Date</label>
    <summarizedField>Repayment_Schedule__c.Due_Date__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>