care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Principal_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Loan_Principal_Disbursed__c</fullName>
    <description>Loan amount the borrower received in local currency</description>
    <label>Loan Principal Disbursed (LC)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>