care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Principal_Disbursed_AUD__c.field-meta.xml
<CustomField>
    <fullName>Loan_Principal_Disbursed_AUD__c</fullName>
    <label>Loan Principal Disbursed (AUD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>