care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Principal_Disbursed_FSP_Txt__c.field-meta.xml
<CustomField>
    <fullName>Loan_Principal_Disbursed_FSP_Txt__c</fullName>
    <label>Loan Principal Disbursed (Portal)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>