care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Principal_Disbursed_USD__c.field-meta.xml
<CustomField>
    <fullName>Loan_Principal_Disbursed_USD__c</fullName>
    <description>Loan amount the borrower received in USD</description>
    <label>Loan Principal Disbursed (USD)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>