care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Proposal_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loan_Proposal_Rejection_Reason__c</fullName>
    <label>Loan Proposal Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>Missing information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>System Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>