care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Proposal_Rejection_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Loan_Proposal_Rejection_Reason_Comments__c</fullName>
    <label>Loan Proposal Rejection Reason Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>