care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Proposal_Status__c</fullName>
    <label>Loan Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>System Rejected</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Content Approved</fullName>
            </value>
            <value>
                <fullName>Ready to Publish</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>