care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <length>110</length>
    <required>true</required>
    <type>Text</type>
</CustomField>