care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Loan_Schedule__c</fullName>
    <description>Monthly: One repayment made per month
End of term: One repayment made at the end of the loan term
Irregular: Any other repayment schedule</description>
    <label>Loan Schedule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>End of Term</fullName>
            </value>
            <value>
                <fullName>Irregular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>