care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Months__c</fullName>
    <description>&quot;number of month for borrower to repay
displayed as Loan length on website&quot;</description>
    <label>Number of Repayments</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>