care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Term_Months_Intended__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Months_Intended__c</fullName>
    <formula>IF(ISPICKVAL(Loan_Schedule__c, &apos;Monthly&apos;), IF(Year(Loan_Maturity_Date__c)-Year(First_Repayment_Due_Date__c)=0, (Month(Loan_Maturity_Date__c) - Month(First_Repayment_Due_Date__c))+1, (((Year(Loan_Maturity_Date__c)-Year(First_Repayment_Due_Date__c))*12)+Month(Loan_Maturity_Date__c))-Month(First_Repayment_Due_Date__c)+1), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>