care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Title__c.field-meta.xml
<CustomField>
    <fullName>Loan_Title__c</fullName>
    <label>Loan Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>