care-australia-uat/force-app/main/default/objects/Loan__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <description>Industry / sector</description>
    <label>Loan Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Art/Handicrafts</fullName>
            </value>
            <value>
                <fullName>Cafe/Restaurant</fullName>
            </value>
            <value>
                <fullName>Education/training</fullName>
            </value>
            <value>
                <fullName>Farming</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Green/Recycling</fullName>
            </value>
            <value>
                <fullName>Hairdressers/Beauty</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refugees</fullName>
            </value>
            <value>
                <fullName>Retail - clothing and footwear</fullName>
            </value>
            <value>
                <fullName>Retail - grocery</fullName>
            </value>
            <value>
                <fullName>Sewing/Tailoring</fullName>
            </value>
            <value>
                <fullName>Tradesperson</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>