care-australia-uat/force-app/main/default/objects/Loan__c/fields/Location_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Business__c</fullName>
    <label>Location of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Peri Urban</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>