care-australia-uat/force-app/main/default/objects/Loan__c/fields/LWC_Loan_Description__c.field-meta.xml
<CustomField>
    <fullName>LWC_Loan_Description__c</fullName>
    <label>LWC Loan Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>