care-australia-uat/force-app/main/default/objects/Loan__c/fields/Manager_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Approval Request</label>
    <type>Checkbox</type>
</CustomField>