care-australia-uat/force-app/main/default/objects/Loan__c/fields/Months_Count_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Months_Count_Repayments__c</fullName>
    <formula>IF(Year(Loan_Maturity_Date__c)-Year(First_Repayment_Due_Date__c)=0, (Month(Loan_Maturity_Date__c) - Month(First_Repayment_Due_Date__c))+1, (((Year(Loan_Maturity_Date__c)-Year(First_Repayment_Due_Date__c))*12)+Month(Loan_Maturity_Date__c))-Month(First_Repayment_Due_Date__c)+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Count (Repayments)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>