care-australia-uat/force-app/main/default/objects/Loan__c/fields/No_of_Female_Employees_With_Disability__c.field-meta.xml
<CustomField>
    <fullName>No_of_Female_Employees_With_Disability__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Female Employees With Disability</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>