care-australia-uat/force-app/main/default/objects/Loan__c/fields/Nonperforming_Repayment_Count__c.field-meta.xml
<CustomField>
    <fullName>Nonperforming_Repayment_Count__c</fullName>
    <label>Nonperforming Repayment Count</label>
    <summaryFilterItems>
        <field>Repayment_Schedule__c.Non_performing_loan_options__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>