care-australia-uat/force-app/main/default/objects/Loan__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of existing jobs</description>
    <label>Number of Employees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>