care-australia-uat/force-app/main/default/objects/Loan__c/fields/Number_of_Lenders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Lenders__c</fullName>
    <label>Number of Lenders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>