care-australia-uat/force-app/main/default/objects/Loan__c/fields/Number_of_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Repayments__c</fullName>
    <label>Repayments (#)</label>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>