care-australia-uat/force-app/main/default/objects/Loan__c/fields/Outstanding_Loan_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Loan_Amount_USD__c</fullName>
    <formula>If( ISPICKVAL(Stage__c, &quot;Active&quot;), Loan_Principal_Disbursed_USD__c - Cumulative_Amount_Received_To_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Loan Amount (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>