care-australia-uat/force-app/main/default/objects/Loan__c/fields/Published_Amount_AUD__c.field-meta.xml
<CustomField>
    <fullName>Published_Amount_AUD__c</fullName>
    <description>Principal + buffer</description>
    <label>Loan Principal Published</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>