care-australia-uat/force-app/main/default/objects/Loan__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <description>Set by Care Managers, Go-Live date for Loans to be visible on site</description>
    <label>Published Date</label>
    <type>Date</type>
</CustomField>