care-australia-uat/force-app/main/default/objects/Loan__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <description>date  set when status changed to rejected</description>
    <label>Rejected Date</label>
    <type>Date</type>
</CustomField>