care-australia-uat/force-app/main/default/objects/Loan__c/fields/Total_Expected_Inc_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Inc_Last_Month__c</fullName>
    <label>Total Expected Inc Last Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>