care-australia-uat/force-app/main/default/objects/Loan__c/fields/Total_Repaid_Amount_AUD__c.field-meta.xml
<CustomField>
    <fullName>Total_Repaid_Amount_AUD__c</fullName>
    <label>Total Repaid Amount (AUD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>