care-australia-uat/force-app/main/default/objects/Loan__c/fields/Total_Repayment_Scheduled_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Repayment_Scheduled_Amount__c</fullName>
    <label>Total Repayment Scheduled Amount</label>
    <summarizedField>Repayment_Schedule__c.Amount_Due__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>