care-australia-uat/force-app/main/default/objects/Loan__c/fields/Written_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Written_Off_Date__c</fullName>
    <label>Written Off Date</label>
    <type>Date</type>
</CustomField>