care-australia-uat/force-app/main/default/objects/Loan__c/fields/Written_Off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Written_Off_Reason__c</fullName>
    <label>Written Off Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>