care-australia-uat/force-app/main/default/objects/Loan__c/recordTypes/Loan.recordType-meta.xml
<RecordType>
    <fullName>Loan</fullName>
    <active>true</active>
    <description>Used for Editable</description>
    <label>Loan</label>
</RecordType>