care-australia-uat/force-app/main/default/objects/Loan__c/recordTypes/Loan_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Loan_Read_Only</fullName>
    <active>true</active>
    <label>Loan Read Only</label>
</RecordType>