care-australia-uat/force-app/main/default/objects/Loan__c/validationRules/Borrower_field_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Borrower_field_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Borrower__c )</errorConditionFormula>
    <errorDisplayField>Borrower__c</errorDisplayField>
    <errorMessage>Borrower is a required field</errorMessage>
</ValidationRule>