care-australia-uat/force-app/main/default/objects/Loan__c/validationRules/Check_ConsentProvide.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_ConsentProvide</fullName>
    <active>true</active>
    <errorConditionFormula>Consent_Provided__c &lt;&gt; true</errorConditionFormula>
    <errorDisplayField>Consent_Provided__c</errorDisplayField>
    <errorMessage>Please provide consent.</errorMessage>
</ValidationRule>